# Sound-Generator

./: CMakeLists.txt  README.md
src/: main.cpp
src/config/: arguments.cpp  arguments.hpp  types.hpp
src/core/: soundplayer.cpp  soundplayer.hpp
src/generators/: binaural_beats.hpp  brown_noise.hpp  generator_base.hpp  white_noise.hpp
